Fix collapsable borders

--- a/src/scss/layout/_collapsable.scss
+++ b/src/scss/layout/_collapsable.scss
@@ -2,7 +2,7 @@
   .hidden__container {
     display: none;
   }
-  .fa-chevron-up {
-    transform: rotate(180deg);
-  }
+  // .fa-chevron-up {
+  //   transform: rotate(180deg);
+  // }
 }
